--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,23 @@
  *= require_tree .
  *= require_self
  */
+body {
+
+	padding-top: 40px;
+}
+
+.navbar {
+
+	background-color: #191919;
+}
+
+a {
+
+	float: right;
+}
+
+.brand {
+	margin-left: 40px;
+	float: left;
+	padding:10px;
+}
