--- a/app/assets/stylesheets/statuses.scss
+++ b/app/assets/stylesheets/statuses.scss
@@ -1,3 +1,33 @@
 // Place all the styles related to the statuses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.status {
+	border-bottom: solid 1px #CCC;
+	padding: 50px 10px;
+}
+
+p {
+	margin: 5px;
+	padding: 3px;
+}
+
+.status p {
+	margin: 4px 0;
+}
+
+.status.hover {
+	background: #FAFAFA
+}
+
+a { 
+	padding: 10px;
+}
+
+.status .admin {
+	display: none;
+}
+
+.status.hover .admin {
+	display: inline;
+}
