--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,16 @@
 			<div class="container">
 				<a href="#" class="brand">Treebook</a>
 				<ul class="nav">
-					<li><%= link_to "All Statuses", statuses_path %></li>
+					<li><%= link_to "All Statuses", statuses_path %>
+					</li>
 
 				</ul>
 			</div>
 		</div>
 	</div>
 	<div class="container">
+		<p class="notice"><%= notice %></p>
+    	<p class="alert"><%= alert %></p>
 		<%= yield %>
 	</div>
 
